[tool.poetry]
name = "asynctest"
version = "0.1.0"
description = "test project"
authors = []

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.extras]
lint = [ "pylint",]

[tool.poetry.dependencies.pylint]
version = "*"
optional = true


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.6.0"
flake8-coding = "^1.3.2"
flake8-spellcheck = "^0.24.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"
pytest = "^6.2.3"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
Faker = "^9.5.0"
pytest-snapshot = "^0.7.0"

[tool.poetry.dev-dependencies.pytest-xdist]
extras = ["psutil"]
version = "^2.1.0"
[tool.nitpick]
style = "nitpick/all.toml"
